fix: Method invocation 'getData' may produce 'NullPointerException'